# splunk-ir-triage-agent

./: .env.example  .gitignore  ARCHITECTURE.md  DEMO_SCRIPT.md  LICENSE  README.md  SETUP.md  pyproject.toml
samples/: alert_brute_force.json  alert_splunk_admin_login.json  alert_suspicious_powershell.json
scripts/: build_demo.py  seed_demo_data.py  smoke_test_mcp.py
src/splunk_ir_agent/: __main__.py  agent.py  splunk_mcp_client.py  triage.py
