[project]
name = "splunk-ir-agent"
version = "0.1.0"
description = "Gemini-powered IR triage agent over Splunk MCP Server"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=0.5.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/splunk_ir_agent"]
